--- a/css_files/register.scss
+++ b/css_files/register.scss
@@ -191,3 +191,19 @@ body {
         }
     }
 }
+
+
+
+@media screen and (max-width:600px) {
+    body{
+        .center{
+            width: 100vw;
+            height: 100vh;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            border-radius: 0;
+        }
+    }
+}
