--- a/css_files/register.css
+++ b/css_files/register.css
@@ -240,7 +240,12 @@ body .center p a {
 }
 
 @media screen and (max-width: 600px) {
+  body {
+    height: 100vh;
+    width: 100vw;
+  }
   body .center {
+    padding-top: 50px;
     width: 100vw;
     height: 100vh;
     position: absolute;
