--- a/css_files/register.scss
+++ b/css_files/register.scss
@@ -196,7 +196,10 @@ body {
 
 @media screen and (max-width:600px) {
     body{
+        height: 100vh;
+        width: 100vw;
         .center{
+            padding-top: 50px;
             width: 100vw;
             height: 100vh;
             position: absolute;
