--- a/css_files/register.scss
+++ b/css_files/register.scss
@@ -198,8 +198,9 @@ body {
     body{
         height: 100vh;
         width: 100vw;
+        background-color: white;
         .center{
-            padding-top: 50px;
+            padding-top: 5git 0px;
             width: 100vw;
             height: 100vh;
             position: absolute;
@@ -207,6 +208,7 @@ body {
             left: 50%;
             transform: translate(-50%,-50%);
             border-radius: 0;
+            box-shadow: none;
         }
     }
 }
