Added index file and composer.json

--- a/css_files/register.css
+++ b/css_files/register.css
@@ -246,7 +246,7 @@ body .center p a {
     background-color: white;
   }
   body .center {
-    padding-top: 5git 0px;
+    padding-top: 50px;
     width: 100vw;
     height: 100vh;
     position: absolute;
