--- a/css_files/register.scss
+++ b/css_files/register.scss
@@ -200,7 +200,7 @@ body {
         width: 100vw;
         background-color: white;
         .center{
-            padding-top: 5git 0px;
+            padding-top: 50px;
             width: 100vw;
             height: 100vh;
             position: absolute;
