--- a/css_files/register.scss
+++ b/css_files/register.scss
@@ -74,7 +74,7 @@ body {
                 width: 50%;
                 h3 {
                     margin: 5px 0;
-                    font-family: "Raleway", sans-serif;
+                    font-family: 'Nunito', sans-serif;
                     .required_field_esterik{
                         color: red;
                     }
@@ -83,7 +83,7 @@ body {
                     padding: 10px;
                     border-radius: 5px;
                     border: 1px solid rgb(221, 220, 220);
-                    font-family: "Raleway", sans-serif;
+                    font-family: 'Nunito', sans-serif;
                 }
             }
         }
@@ -92,7 +92,7 @@ body {
         .Mobile_number {
             margin: 15px 0;
             h3 {
-                font-family: "Raleway", sans-serif;
+                font-family: 'Nunito', sans-serif;
                 margin: 5px 0;
                 .required_field_esterik{
                     color: red;
@@ -103,7 +103,7 @@ body {
                 padding: 10px 10px;
                 border-radius: 5px;
                 border: 1px solid rgb(221, 220, 220);
-                font-family: "Raleway", sans-serif;
+                font-family: 'Nunito', sans-serif;
             }
         }
         .submit_btn {
