--- a/css_files/register.scss
+++ b/css_files/register.scss
@@ -69,6 +69,7 @@ body {
         }
         .fisrt_last_name {
             display: flex;
+            
             width: 100%;
             div {
                 width: 50%;
@@ -209,6 +210,18 @@ body {
             transform: translate(-50%,-50%);
             border-radius: 0;
             box-shadow: none;
+            .first_page{
+            
+            .fisrt_last_name{
+                display: block;
+                width: 100%;
+                div{
+                    width: 100%;
+                    input{
+                        width: 100%;
+                    }
+                }}
+            }
         }
     }
 }
