--- a/css_files/all_details.css
+++ b/css_files/all_details.css
@@ -87,4 +87,11 @@ body .center .details button a {
   text-decoration: none;
   color: white;
 }
+
+@media screen and (max-width: 450px) {
+  body .center {
+    width: 100vw;
+    height: 100vh;
+  }
+}
 /*# sourceMappingURL=all_details.css.map */
