--- a/css_files/settings.scss
+++ b/css_files/settings.scss
@@ -40,3 +40,12 @@ body {
         }
     }
 }
+
+@media screen and (max-width:450px) {
+    body{
+        .center{
+            width: 100vw;
+            height: 100vh;
+        }
+    }
+}
