--- a/css_files/all_details.scss
+++ b/css_files/all_details.scss
@@ -71,3 +71,13 @@ max-height: 400px;
             }
         }
     }}
+
+    
+@media screen and (max-width:450px) {
+    body{
+        .center{
+            width: 100vw;
+            height: 100vh;
+        }
+    }
+}
