--- a/css_files/all_users-dark-mode.scss
+++ b/css_files/all_users-dark-mode.scss
@@ -271,3 +271,13 @@ body {
         }
     }
 }
+
+
+@media screen and (max-width:450px) {
+    body{
+        .center{
+            width: 100vw;
+            height: 100vh;
+        }
+    }
+}
