--- a/css_files/chat_area-dark-mode.scss
+++ b/css_files/chat_area-dark-mode.scss
@@ -260,3 +260,12 @@ body {
         }
     }
 }
+
+@media screen and (max-width:450px) {
+    body{
+        .center{
+            width: 100vw;
+            height: 100vh;
+        }
+    }
+}
