--- a/css_files/updateProfilePic.scss
+++ b/css_files/updateProfilePic.scss
@@ -90,3 +90,13 @@ body {
         }
     }
 }
+
+
+@media screen and (max-width:450px) {
+    body{
+        .center{
+            width: 100vw;
+            height: 100vh;
+        }
+    }
+}
